<resources>
    <string name="app_name">qta2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="cerrar">cerrar</string>
    <string name="hola">hola!</string>
    <string name="instrucciones_mitades"><![CDATA[
<b>Te voy a ayudar a solucionar el problema de las 2 mitades.</b><br><br>
1. Ingresa una cadena de caracteres.<br>
2. Te ayudaré a cortar la cadena en dos partes "iguales" (si la longitud de la cadena es impar, colocaré el carácter central en la primera cadena, de modo que la primera cadena contenga un carácter más que la segunda).<br>
3. Luego imprimiré la nueva cadena en una sola fila con la primera y la segunda mitad intercambiadas (la segunda mitad es la primera y la primera mitad es la segunda)
]]></string>
    <string name="ingresa_una_cadena_de_caracteres">Ingresa una cadena de caracteres</string>
    <string name="solucionar">Solucionar</string>
    <string name="dosmitadesnav">dosMitadesNav</string>
    <string name="dospalabrasnav">dosPalabrasNav</string>
    <string name="quitarfragmentonav">quitarFragmentoNav</string>
    <string name="dos_mitades">Dos mitades</string>
    <string name="dos_palabras">Dos palabras</string>
    <string name="quitar_fragmento">Quitar fragmento</string>
    <string name="holaRespuesta">Hola %1$s</string>
    <string name="hola2">Hola %1$s</string>
    <string name="solucion">Solucion</string>
    <string name="instrucciones_dos_palabras"><![CDATA[
<b>Te voy a ayudar a solucionar el problema de las 2 palabras.</b><br><br>
1. Ingresa una cadena de caracteres que contenga solo 2 palabras separadas por un espacio.<br>
2. Imprimiré una nueva cadena con las posiciones intercambiadas<br>
<i>(la segunda palabra se imprime primero)</i>
]]></string>
    <string name="instrucciones_quitar_fragmento"><![CDATA[
<b>Te voy a ayudar a solucionar el problema quitar el fragmento.</b><br><br>
1. Ingresa una cadena de caracteres en la que por lo menos existe 2 veces la letra <b>h</b>.<br>
2. Eliminaré de esa cadena la primera y la última aparición de la letra <b>h</b>, así como todos los caracteres entre ellas.<br>
3. Luego imprimiré la nueva cadena en pantalla.
]]></string>
    <string name="ups_algo_sali_mal_revisa_tu_cadena">Ups! algo salió mal revisa tu cadena.</string>
</resources>