<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".IniciarSesionFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/verde"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/arrow_back_24dp_e3e3e3_fill0_wght400_grad0_opsz24"
            app:navigationIconTint="@color/black"
            app:title="Iniciar Sesión"
            app:titleCentered="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topAppBar">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usuarioTextInput"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                app:boxStrokeColor="@color/verde"
                app:boxStrokeWidth="2dp"
                android:layout_marginBottom="70dp"
                app:boxStrokeErrorColor="@color/verde"
                app:boxStrokeWidthFocused="2dp"
                app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usuarioEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contraseñaTextInput"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/contrase_a"
                app:boxStrokeColor="@color/verde"
                app:boxStrokeWidth="2dp"
                android:layout_marginBottom="70dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contraseñaEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnIniciarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/verde"
                android:text="@string/ingresar"
                android:textColor="@color/black" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>